; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/watchdog/extr_mpc8xxx_wdt.c_mpc8xxx_wdt_init_late.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/watchdog/extr_mpc8xxx_wdt.c_mpc8xxx_wdt_init_late.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@wd_base = common dso_local global i32 0, align 4
@ENODEV = common dso_local global i32 0, align 4
@mpc8xxx_wdt_miscdev = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [46 x i8] c"cannot register miscdev on minor=%d (err=%d)\0A\00", align 1
@WATCHDOG_MINOR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @mpc8xxx_wdt_init_late to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mpc8xxx_wdt_init_late() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* @wd_base, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %8, label %5

5:                                                ; preds = %0
  %6 = load i32, i32* @ENODEV, align 4
  %7 = sub nsw i32 0, %6
  store i32 %7, i32* %1, align 4
  br label %18

8:                                                ; preds = %0
  %9 = call i32 @misc_register(i32* @mpc8xxx_wdt_miscdev)
  store i32 %9, i32* %2, align 4
  %10 = load i32, i32* %2, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %17

12:                                               ; preds = %8
  %13 = load i32, i32* @WATCHDOG_MINOR, align 4
  %14 = load i32, i32* %2, align 4
  %15 = call i32 @pr_err(i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str, i64 0, i64 0), i32 %13, i32 %14)
  %16 = load i32, i32* %2, align 4
  store i32 %16, i32* %1, align 4
  br label %18

17:                                               ; preds = %8
  store i32 0, i32* %1, align 4
  br label %18

18:                                               ; preds = %17, %12, %5
  %19 = load i32, i32* %1, align 4
  ret i32 %19
}

declare dso_local i32 @misc_register(i32*) #1

declare dso_local i32 @pr_err(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
